--- a/back/recommendation-service/pom.xml
+++ b/back/recommendation-service/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>dev.ilya-anna</groupId>
-	<artifactId>recomendation-service</artifactId>
+	<artifactId>recommendation-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>recomendation-service</name>
 	<description>service for manage authentication</description>
