--- a/back/gateway/src/main/resources/application.yml
+++ b/back/gateway/src/main/resources/application.yml
@@ -1,1 +1,17 @@
-spring.application.name=gateway
+spring:
+  application:
+    name: gateway
+server:
+  port: 8080
+
+eureka:
+  client:
+    defaultZone: http://discovery-service:8761/eureka
+    registerWithEureka: false
+    fetchRegistry: false
+app:
+  cors:
+    allowedOrigins: ${CORS_ALLOWED_ORIGINS}
+    allowedMethods: ${CORS_ALLOWED_METHODS}
+    allowedHeaders: ${CORS_ALLOWED_HEADERS}
+    allowCredentials: ${CORS_ALLOW_CREDENTIALS}
