--- a/back/recommendation-service/pom.xml
+++ b/back/recommendation-service/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>dev.ilya-anna</groupId>
 	<artifactId>recommendation-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>recomendation-service</name>
+	<name>recommendation-service</name>
 	<description>service for manage authentication</description>
 	<url/>
 	<licenses>
