--- a/dev-compose/.env
+++ b/dev-compose/.env
@@ -1,3 +1,12 @@
 # .env file
+
+#postgres
 POSTGRES_USER=app
 POSTGRES_PASSWORD=965ca662c7141613e1b845c526baa86c
+
+
+#cors
+CORS_ALLOWED_ORIGINS=https://localhost:3000
+CORS_ALLOWED_METHODS=*
+CORS_ALLOWED_HEADERS=*
+CORS_ALLOW_CREDENTIALS=true
