--- a/back/user-service/src/main/resources/application.yml
+++ b/back/user-service/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 spring:
   application:
-    name: auth-service
+    name: user-service
+
 
   datasource:
     url: ${POSTGRES_URI}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
+
 
   data:
     redis:
@@ -23,7 +25,4 @@ eureka:
 
 app:
   jwt:
-    accessDuration: ${JWT_ACCESS_DURATION}
     accessSecret: ${JWT_ACCESS_SECRET}
-    refreshDuration: ${JWT_REFRESH_DURATION}
-    refreshSecret: ${JWT_REFRESH_SECRET}
