--- a/dev-compose/compose.yml
+++ b/dev-compose/compose.yml
@@ -129,6 +129,195 @@ services:
     networks:
       - back-network
 
+  user-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/user-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/user_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_DATABASE_NUMBER=2
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+    networks:
+      - back-network
+
+  blacklist-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/blacklist-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/blacklist_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_DATABASE_NUMBER=3
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+    networks:
+      - back-network
+
+  chat-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/chat-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/chat_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_DATABASE_NUMBER=4
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+    networks:
+      - back-network
+
+  comment-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/comment-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/comment_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_DATABASE_NUMBER=5
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+    networks:
+      - back-network
+
+  favourite-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/favourite-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/favourite_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_DATABASE_NUMBER=6
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+    networks:
+      - back-network
+
+  recommendation-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/recommendation-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/recommendation_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+    networks:
+      - back-network
+
+  notification-service:
+    build:
+      context: ../back
+      dockerfile: ../dev-compose/notification-service.Dockerfile
+    ports:
+      - :8080
+    depends_on:
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      - POSTGRES_URI=jdbc:postgresql://postgres:5432/notification_service
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - REDIS_DATABASE_NUMBER=7
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - EUREKA_URI=http://discovery-service:8761/eureka
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+    networks:
+      - back-network
+
 networks:
   back-network:
 
