--- a/back/gateway/src/main/resources/application.yml
+++ b/back/gateway/src/main/resources/application.yml
@@ -10,6 +10,8 @@ eureka:
       defaultZone: ${EUREKA_URI}
     instance:
       preferIpAddress: true
+    registerWithEureka: false
+    fetchRegistry: false
 
 app:
   cors:
