--- a/dev-compose/compose.yml
+++ b/dev-compose/compose.yml
@@ -25,6 +25,8 @@ services:
       - :6379
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
+    volumes:
+      - redis-data:/data
     healthcheck:
       test:  ["CMD-SHELL", "sh -c 'redis-cli ping'"]
       interval: 10s
@@ -101,7 +103,9 @@ services:
   auth-service:
     build:
       context: ../back
-      dockerfile: ../dev-compose/auth-service.Dockerfile
+      dockerfile: Dockerfile
+      args:
+        - SERVICE=auth-service
     ports:
       - :8080
     depends_on:
@@ -113,6 +117,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+
     environment:
       - JWT_ACCESS_DURATION=${JWT_ACCESS_DURATION}
       - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
